--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -259,12 +259,12 @@
     <Content Include="BlendedAPI\vyzva\ViewParts\Toolbar\Empty.html" />
     <Content Include="BlendedAPI\vyzva\ViewParts\Toolbar\Run.html" />
     <Content Include="BlendedAPI\vyzva\ViewParts\Toolbar\Module.html" />
-    <Content Include="BlendedAPI\vyzva\Views\moduleHome.html" />
-    <Content Include="BlendedAPI\vyzva\Views\pretestHome.html" />
+    <Content Include="BlendedAPI\vyzva\Views\module.html" />
+    <Content Include="BlendedAPI\vyzva\Views\pretest.html" />
     <Content Include="BlendedAPI\vyzva\Views\exercise.html" />
-    <Content Include="BlendedAPI\vyzva\Views\productHome\pretestItem.html" />
+    <Content Include="BlendedAPI\vyzva\Views\home\pretestItem.html" />
     <Content Include="BlendedAPI\vyzva\Views\_pageTemplate.html" />
-    <Content Include="BlendedAPI\vyzva\Views\productHome.html" />
+    <Content Include="BlendedAPI\vyzva\Views\home.html" />
     <Content Include="JsLib\css\flag-mid.css" />
     <Content Include="JsLib\css\flag-small.css" />
     <Content Include="JsLib\Scripts\angular-ie8.js" />
@@ -1359,22 +1359,23 @@
     <TypeScriptCompile Include="BlendedAPI\app.ts" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\Lib.ts" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\ShowExercise.ts" />
+    <TypeScriptCompile Include="BlendedAPI\Scripts\stateMan.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\app.ts" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\Loader.ts" />
     <TypeScriptCompile Include="BlendedAPI\Controlers\exercise.ts" />
-    <TypeScriptCompile Include="BlendedAPI\Scripts\Tasks.ts" />
+    <None Include="BlendedAPI\Scripts\Tasks.ts_" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\Scripts\Lib.ts" />
-    <TypeScriptCompile Include="BlendedAPI\vyzva\Scripts\Tasks.ts" />
-    <TypeScriptCompile Include="BlendedAPI\Scripts\TasksNew.ts" />
+    <None Include="BlendedAPI\vyzva\Scripts\Tasks.ts_" />
+    <TypeScriptCompile Include="BlendedAPI\Scripts\Tasks.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\ViewParts\Toolbar\Toolbar.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\ViewParts\Toolbar\Empty.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\ViewParts\Toolbar\Run.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\ViewParts\Toolbar\Module.ts" />
-    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\moduleHome.ts" />
-    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\exerciseHome.ts" />
-    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\pretestHome.ts" />
-    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\productHome.ts" />
-    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\productHome\pretestItem.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\module.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\exercise.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\pretest.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\home.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\home\pretestItem.ts" />
     <TypeScriptCompile Include="BS3\js\bootstrap.d.ts" />
     <TypeScriptCompile Include="Courses\codes\chinhSpeaking.ts" />
     <TypeScriptCompile Include="Courses\codes\docReference.ts" />
