--- a/Web4/configs/Web.Alpha.AppSetting.config
+++ b/Web4/configs/Web.Alpha.AppSetting.config
@@ -12,11 +12,15 @@
   <add key="SSAS.ConnectionString" value="data source=195.250.145.26;user id=lm-virtual-1\lmadmin;password=@LangMast3r07;" />
   <add key="trados-rew_school-dir" value="q:\LMCom\rew\web4" />
   <add key="DataSourcePath" value="q:\LMCom\" />
+
   <add key="Chilkat.MailMan" value="SGORDICMAILQ_tPNaZl6U8K3D"/>
   <add key="Chilkat.Mht" value="SGORDICMHT_TQ85okoF8B4v"/>
   <add key="Email.SmtpHost" value="medea.dialtelecom.cz"/>
   <add key="Email.SmtpUsername" value="obchod@langmaster.cz"/>
-  <add key="Email.SmtpPassword" value="lmobchodlm"/>
+  <add key="Email.SmtpSsl" value="false"/>
+  <add key="Email.StartTLS" value="false"/>
+  <add key="Email.SmtpPort" value="25"/>
+  
   <add key="Logger.emails" value="pzika@langmaster.cz" />
   <add key="isSourceWeb" value="true" />
 
