--- a/Web4/Web.AppSetting.config
+++ b/Web4/Web.AppSetting.config
@@ -81,5 +81,7 @@
   <add key="Chilkat.Mht" value="SGORDICMHT_TQ85okoF8B4v"/>
   <add key="Email.SmtpHost" value="medea.dialtelecom.cz"/>
   <add key="Email.SmtpUsername" value="obchod@langmaster.cz"/>
-  <add key="Email.SmtpPassword" value="lmobchodlm"/>
+  <add key="Email.SmtpSsl" value="false"/>
+  <add key="Email.StartTLS" value="false"/>
+  <add key="Email.SmtpPort" value="25"/>
 </appSettings>
