--- a/Web4/Web.ConnectionStrings.config
+++ b/Web4/Web.ConnectionStrings.config
@@ -1,7 +1,6 @@
 <?xml version="1.0"?>
 <connectionStrings>
-  <!--<add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />-->
-  <add name="Container" connectionString="Data Source=195.250.145.26\MSSQLSERVER,1433;initial catalog=skrivanek;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;Connect Timeout=15;Encrypt=False;TrustServerCertificate=False" providerName="System.Data.SqlClient" />
+  <add name="Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
 
   <add name="AzureContainer" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=AzureLmcom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
   <add name="ScormExNet35Container" connectionString="Data Source=localhost\SQLEXPRESS;Initial Catalog=NewLMCom;Integrated Security=False;User ID=lmcomdatatest;Password=lmcomdatatest;" providerName="System.Data.SqlClient" />
