--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -255,6 +255,8 @@
     <None Include="BlendedAPI\Styles\style.less" />
     <Content Include="BlendedAPI\Styles\img\lm-logo-black.png" />
     <Content Include="BlendedAPI\views\exercise.html" />
+    <Content Include="BlendedAPI\vyzva\Views\managerSchool.html" />
+    <Content Include="BlendedAPI\vyzva\Views\managerLangmaster.html" />
     <Content Include="BlendedAPI\vyzva\ViewParts\Toolbar\Toolbar.html" />
     <Content Include="BlendedAPI\vyzva\ViewParts\Toolbar\Empty.html" />
     <Content Include="BlendedAPI\vyzva\ViewParts\Toolbar\Run.html" />
@@ -1358,17 +1360,20 @@
     <TypeScriptCompile Include="BlendedAPI\oldBoot.ts" />
     <TypeScriptCompile Include="BlendedAPI\app.ts" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\Lib.ts" />
+    <None Include="BlendedAPI\Scripts\Persistence.ts_" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\ShowExercise.ts" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\stateMan.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\app.ts" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\Loader.ts" />
-    <TypeScriptCompile Include="BlendedAPI\Controlers\exercise.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\Scripts\Intranet.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\Scripts\Lib.ts" />
     <TypeScriptCompile Include="BlendedAPI\Scripts\Tasks.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\ViewParts\Toolbar\Toolbar.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\ViewParts\Toolbar\Empty.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\ViewParts\Toolbar\Run.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\ViewParts\Toolbar\Module.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\managerSchool.ts" />
+    <TypeScriptCompile Include="BlendedAPI\vyzva\Views\managerLangmaster.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\Views\module.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\Views\exercise.ts" />
     <TypeScriptCompile Include="BlendedAPI\vyzva\Views\pretest.ts" />
@@ -1398,8 +1403,11 @@
     <Content Include="Schools\Design\lmConsole.aspx" />
     <Content Include="Schools\Design\QueryBuilder.aspx" />
     <Content Include="Schools\Design\sitemap.xml" />
-    <EmbeddedResource Include="Migrations\201508172018132_v001.resx">
-      <DependentUpon>201508172018132_v001.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201508270820535_v001.resx">
+      <DependentUpon>201508270820535_v001.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201508271135234_v002.resx">
+      <DependentUpon>201508271135234_v002.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -2437,7 +2445,7 @@
     <Compile Include="Author\Author.aspx.designer.cs">
       <DependentUpon>Author.aspx</DependentUpon>
     </Compile>
-    <Compile Include="BlendedAPI\vyzva\Server\DataModel\StudyGrups.cs" />
+    <Compile Include="BlendedAPI\Server\Persistence.cs" />
     <Compile Include="BlendedAPI\vyzva\Server\Vyzva57Services.cs" />
     <Compile Include="BlendedAPI\vyzva\Server\DataModel\Company.cs" />
     <Compile Include="BlendedAPI\vyzva\Server\DataModel\CourseData.cs" />
@@ -2462,9 +2470,13 @@
     <Compile Include="links.aspx.designer.cs">
       <DependentUpon>links.aspx</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201508172018132_v001.cs" />
-    <Compile Include="Migrations\201508172018132_v001.Designer.cs">
-      <DependentUpon>201508172018132_v001.cs</DependentUpon>
+    <Compile Include="Migrations\201508270820535_v001.cs" />
+    <Compile Include="Migrations\201508270820535_v001.Designer.cs">
+      <DependentUpon>201508270820535_v001.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201508271135234_v002.cs" />
+    <Compile Include="Migrations\201508271135234_v002.Designer.cs">
+      <DependentUpon>201508271135234_v002.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="mp3Uploader.ashx.cs">
