--- a/Web4/Web4.csproj
+++ b/Web4/Web4.csproj
@@ -1418,6 +1418,12 @@
     <EmbeddedResource Include="Migrations\201508291827345_v001.resx">
       <DependentUpon>201508291827345_v001.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509010747030_v002.resx">
+      <DependentUpon>201509010747030_v002.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201509010756168_v003.resx">
+      <DependentUpon>201509010756168_v003.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -2482,6 +2488,14 @@
     <Compile Include="Migrations\201508291827345_v001.cs" />
     <Compile Include="Migrations\201508291827345_v001.Designer.cs">
       <DependentUpon>201508291827345_v001.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201509010747030_v002.cs" />
+    <Compile Include="Migrations\201509010747030_v002.Designer.cs">
+      <DependentUpon>201509010747030_v002.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201509010756168_v003.cs" />
+    <Compile Include="Migrations\201509010756168_v003.Designer.cs">
+      <DependentUpon>201509010756168_v003.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="mp3Uploader.ashx.cs">
