--- a/.gitignore
+++ b/.gitignore
@@ -226,8 +226,8 @@ lmcom/
 web4/siteroot.js
 web4/siteroot.all.js
 
-Web4/Schools/SLExtension.dll
 *.xap
-Web4/Schools/SLExtension.xap
+*.gzip
+*.min.js
 Web4/Schools/SLExtension.dll
-Web4/Schools/SLExtension.xap
+
