--- a/Web4/Web.config
+++ b/Web4/Web.config
@@ -67,6 +67,8 @@
       <mimeMap fileExtension=".ttf" mimeType="application/octet-stream" />
       <remove fileExtension=".woff" />
       <mimeMap fileExtension=".woff" mimeType="font/x-woff" />
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="font/x-woff" />
       <remove fileExtension=".otf" />
       <mimeMap fileExtension=".otf" mimeType="font/otf" />
       <remove fileExtension=".png" />
