vyzva web a opravy

--- a/Blended/Blended.csproj
+++ b/Blended/Blended.csproj
@@ -136,11 +136,11 @@
     <Content Include="app\Pages\demosound-lang-level.html" />
     <Content Include="app\Pages\demosound-lang.html" />
     <Content Include="app\Pages\demosound.html" />
-    <Content Include="app\Pages\index - Copy.html" />
+    <Content Include="app\Pages\index.html" />
     <Content Include="app\Pages\statistics.html" />
     <Content Include="app\Pages\vyzva57.html" />
     <Content Include="app\Pages\contact.html" />
-    <Content Include="app\Pages\index.html" />
+    <Content Include="app\Pages\index_.html" />
     <Content Include="app\Views\SEO.html" />
     <Content Include="app\Views\TopBar.html" />
     <Content Include="app\Views\TopBarModal.html" />
